# rust_mandelbrot

./: Cargo.toml
src/: main.rs  mandelbrot.rs
