[package]
name = "mandelbrot_explorer"
version = "0.1.0"
authors = ["Yolan Uyttenhove <yuyttenhove@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
image = "0.23.12"
rayon = "1.5.0"
ndarray = { version = "0.14.0", features = ["rayon"] }
glium = "0.29.0"
